--- a/languages/en_US/LC_MESSAGES/demo.po
+++ b/languages/en_US/LC_MESSAGES/demo.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Gettext Multi-language website demo\n"
 "POT-Creation-Date: 2016-06-09 23:45+0800\n"
-"PO-Revision-Date: 2016-06-09 23:45+0800\n"
+"PO-Revision-Date: 2018-03-29 14:40+0800\n"
 "Last-Translator: 科技玩客 TechPlayer\n"
-"Language-Team: 科技玩客 Techplayer <https.//www.techplayer.org>\n"
+"Language-Team: 張文相 Zhang Wenxiang <https://blog.reh.tw>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 2.0.6\n"
 "X-Poedit-Basepath: ../../..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SearchPath-0: index.php\n"
